update doc structure, add render_stl.py which creates the standard library .rst files from conf.py, extension modules now required docstrings

--- a/docs/stl.rst.template
+++ b/docs/stl.rst.template
@@ -7,14 +7,7 @@ Standard Library Modules
 .. toctree::
   :maxdepth: 1
 
-  stl/craftr.ext.archive
-  stl/craftr.ext.cmake
-  stl/craftr.ext.compiler
-  stl/craftr.ext.git
-  stl/craftr.ext.platform
-  stl/craftr.ext.python
-  stl/craftr.ext.rules
-  stl/craftr.ext.unix
+  {{stl_toctree}}
 
 General Properties
 ------------------
