--- a/craftr/stl/lang.python/manifest.json
+++ b/craftr/stl/lang.python/manifest.json
@@ -1,14 +1,11 @@
 {
-  "name": "lang.csharp",
+  "name": "lang.python",
   "version": "1.0.0",
   "author": "",
   "url": "",
   "dependencies": {},
   "options": {
-    "csc": {
-      "type": "string"
-    },
-    "runprefix": {
+    "bin": {
       "type": "string"
     }
   },
