--- a/examples/cpp/manifest.json
+++ b/examples/cpp/manifest.json
@@ -4,7 +4,7 @@
   "author": "",
   "url": "",
   "dependencies": {
-    "lang.cxx.msvc": "*"
+    "lang.cxx.clang": "*"
   },
   "options": {},
   "loaders": []
