--- a/craftr/stl/lang.cxx/manifest.json
+++ b/craftr/stl/lang.cxx/manifest.json
@@ -1,10 +1,11 @@
 {
-  "name": "examples.cpp",
+  "name": "lang.cxx",
   "version": "1.0.0",
   "author": "",
   "url": "",
   "dependencies": {
-    "lang.cxx": "*"
+    "lang.cxx.msvc": "*",
+    "lang.cxx.clang": "*"
   },
   "options": {},
   "loaders": []
