--- a/craftr/stl/lib.cxx.curlpp/manifest.json
+++ b/craftr/stl/lib.cxx.curlpp/manifest.json
@@ -16,6 +16,10 @@
       "type": "bool",
       "help": "Whether to build a static or dynamic library. Must match the linkage of cURL.",
       "default": true
+    },
+    "rtti": {
+      "type": "bool",
+      "default": true
     }
   },
   "loaders": [
