enable RTTI with MSVC by default

--- a/craftr/stl/lang.cxx.msvc/manifest.json
+++ b/craftr/stl/lang.cxx.msvc/manifest.json
@@ -14,12 +14,11 @@
       "help": "The name of the target platform. Valid values are \"x86\", \"amd64\" and \"ia64\""
     },
     "debug": {
-      "type": "bool",
-      "inherit": true
+      "type": "bool"
     },
     "rtti": {
       "type": "bool",
-      "inherit": true
+      "default": true
     }
   },
   "loaders": []
