using dlib in examples.cpp now

--- a/examples/examples.cpp/manifest.json
+++ b/examples/examples.cpp/manifest.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "lang.cxx": "*",
     "lib.cxx.curlpp": "*",
+    "lib.cxx.dlib": "*",
     "lib.cxx.tinyxml2": "*"
   },
   "options": {},
