--- a/examples/examples.cpp/manifest.json
+++ b/examples/examples.cpp/manifest.json
@@ -7,6 +7,7 @@
     "lang.cxx": "*",
     "lib.cxx.curlpp": "*",
     "lib.cxx.dlib": "*",
+    "lib.cxx.qt5": "*",
     "lib.cxx.tinyxml2": "*"
   },
   "options": {},
