MSVC add .embedd_debug_symbols option (default true) and make linker respect module .debug option

--- a/craftr/stl/craftr.lang.cxx.msvc/manifest.json
+++ b/craftr/stl/craftr.lang.cxx.msvc/manifest.json
@@ -19,6 +19,11 @@
     "rtti": {
       "type": "bool",
       "default": true
+    },
+    "embedd_debug_symbols": {
+      "type": "bool",
+      "default": true,
+      "help": "Embed debug symbols into the .obj and .lib file (on by default), otherwise generate .pdb files"
     }
   }
 }
