add cpp_stdlib option to craftr.lang.cxx.clang and use -lc++ instead of -lstdc++ with Clang by default

--- a/craftr/stl/craftr.lang.cxx.clang/manifest.json
+++ b/craftr/stl/craftr.lang.cxx.clang/manifest.json
@@ -21,6 +21,7 @@
     "as": "string",
     "c": "string",
     "cpp": "string",
-    "ar": "string"
+    "ar": "string",
+    "cpp_stdlib": "string"
   }
 }
