add regex_backend option to craftr.lib.googlebenchmark

--- a/craftr/stl_auxiliary/craftr.lib.googlebenchmark/manifest.json
+++ b/craftr/stl_auxiliary/craftr.lib.googlebenchmark/manifest.json
@@ -11,6 +11,10 @@
     "version": {
       "type": "string",
       "default": "v1.1.0"
+    },
+    "regex_backend": {
+      "type": "string",
+      "default": "std"
     }
   }
 }
