--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-colorama
-glob2
-jsonschema
-ninja_syntax
-nr
-py-require
-termcolor
-werkzeug
+colorama==0.3.7
+glob2==0.5
+jsonschema==2.5.1
+ninja-syntax==1.6.0
+nr==1.3.5
+py-require==0.17
+termcolor==1.1.0
+Werkzeug==0.11.11
