--- a/craftr/stl/craftr.lang.cxx.common/manifest.json
+++ b/craftr/stl/craftr.lang.cxx.common/manifest.json
@@ -1,8 +1,9 @@
 {
-  "name": "craftr.lang.cxx.clang",
+  "name": "craftr.lang.cxx.common",
   "version": "1.0.0",
-  "author": "",
-  "url": "",
+  "description": "Abstract of the common interface for Clang/LLVM and GCC to compile ASM, C and C++",
+  "author": "Niklas Rosenstein <rosensteinniklas@gmail.com>",
+  "url": "https://github.com/craftr-build/craftr",
   "dependencies": {},
   "options": {
     "toolkit": {
