fix broken craftr.lang.cxx manifest which was stil referencing old dependency to craftr.lang.cxx.clang

--- a/craftr/stl/craftr.lang.cxx/manifest.json
+++ b/craftr/stl/craftr.lang.cxx/manifest.json
@@ -5,7 +5,7 @@
   "url": "",
   "dependencies": {
     "craftr.lang.cxx.msvc": "*",
-    "craftr.lang.cxx.clang": "*"
+    "craftr.lang.cxx.common": "*"
   },
   "options": {
     "toolkit": {
