enhanced Qt5 support (Windows only still)

--- a/craftr/stl_auxiliary/craftr.lib.qt5/manifest.json
+++ b/craftr/stl_auxiliary/craftr.lib.qt5/manifest.json
@@ -5,9 +5,14 @@
   "url": "",
   "dependencies": {},
   "options": {
-    "path": {
-      "type": "string",
+    "dir": {
+      "type": "path",
       "inherit": false
+    },
+    "link_style": {
+      "type": "string",
+      "default": "detect",
+      "help": "The link style of Qt. Can be 'detect', 'static' or 'dynamic'"
     }
   }
 }
