update missing license headers in example files

--- a/examples/examples.cpp-qt5/craftr/manifest.json
+++ b/examples/examples.cpp-qt5/craftr/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "NiklasRosenstein.installer",
+  "name": "examples.cpp-qt5",
   "version": "1.0.0",
   "project_dir": "..",
   "author": "Niklas Rosenstein <rosensteinniklas@gmail.com>",
