add support for Qt5 debug builds

--- a/craftr/stl_auxiliary/craftr.lib.qt5/manifest.json
+++ b/craftr/stl_auxiliary/craftr.lib.qt5/manifest.json
@@ -13,6 +13,7 @@
       "type": "string",
       "default": "detect",
       "help": "The link style of Qt. Can be 'detect', 'static' or 'dynamic'"
-    }
+    },
+    "debug": "bool"
   }
 }
