add 'exflags' option to craftr.lang.cxx.common module, close #152

--- a/craftr/stl/craftr.lang.cxx.common/manifest.json
+++ b/craftr/stl/craftr.lang.cxx.common/manifest.json
@@ -23,6 +23,7 @@
     "c": "string",
     "cpp": "string",
     "ar": "string",
-    "cpp_stdlib": "string"
+    "cpp_stdlib": "string",
+    "exflags": "bool"
   }
 }
