cxx.common now has a .ccprefix option now, no longer make assumptions based on the CC compiler, close #149

--- a/craftr/stl/craftr.lang.cxx.common/manifest.json
+++ b/craftr/stl/craftr.lang.cxx.common/manifest.json
@@ -24,6 +24,10 @@
     "cpp": "string",
     "ar": "string",
     "cpp_stdlib": "string",
-    "exflags": "bool"
+    "exflags": "bool",
+    "ccprefix": {
+      "type": "string",
+      "help": "Prefix for all tools, useful for cross-compiling. Not added for explicitly defined tool names."
+    }
   }
 }
