Squashed commit of the following:
commit 356b9f6fe05964888b1dffbc8dcd2ffa98e22a76
Author: Niklas Rosenstein <rosensteinniklas@gmail.com>
Date:   Wed Jan 11 15:30:33 2017 +0800

    assert call() succeeds, download and unpack Ninja

commit e56b89b1d8a4dc2d238662eb2a71bd38714e5a3e
Author: Niklas Rosenstein <rosensteinniklas@gmail.com>
Date:   Wed Jan 11 15:25:43 2017 +0800

    add tests/ directory and run examples.c with it

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,12 @@ python:
   - "3.4"
   - "3.5"
 install:
-  - pip install nr
+  - pip install nose wget
   - pip install -e .
-script: echo "nothing to do yet"
+  # Download and extract Ninja
+  - mkdir .tmp
+  - curl -L https://github.com/ninja-build/ninja/releases/download/v1.7.2/ninja-linux.zip -o .tmp/ninja-linux.zip
+  - unzip .tmp/ninja-linux.zip -d .tmp
+  - export PATH=$PWD/.tmp:$PATH
+script:
+  - nosetests tests
