add 'Projects using Craftr' page to docs

--- a/docs/pydocmd.yml
+++ b/docs/pydocmd.yml
@@ -16,3 +16,4 @@ pages:
   - Build Configuration: ref/config.md
 - Changelog: changes.md << ../CHANGES.md
 - FAQ: faq.md
+- Projects using Craftr: projects.md
