add lib/action.py, .gitignore and add 'sumtypes' module to package manifest

--- a/nodepy-package.toml
+++ b/nodepy-package.toml
@@ -7,3 +7,6 @@ resolve_root = "lib"
 
 [authors]
 "Niklas Rosenstein" = { email = "rosensteinniklas@gmail.com" }
+
+[dependencies.python]
+sumtypes = ">=0.1a4"
