rename from @craftr/core to craftr, add glob2 dependency, update structure and add lib/utils/path.py

--- a/nodepy-package.toml
+++ b/nodepy-package.toml
@@ -1,5 +1,5 @@
 [package]
-name = "@craftr/core"
+name = "craftr"
 version = "3.0.0"
 description = "The Craftr build system core application."
 license = "MIT"
@@ -10,3 +10,4 @@ resolve_root = "lib"
 
 [dependencies.python]
 sumtypes = ">=0.1a4"
+glob2 = ">=0.6"
