build C# on travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ matrix:
 env:
 - BUILD_MODULE=examples/java BUILD_OPTIONS=":main_run -d java.dist_type=onejar"
 - BUILD_MODULE=examples/java BUILD_OPTIONS=":main_run -d java.dist_type=merge"
-#- BUILD_MODULE=examples/csharp
+- BUILD_MODULE=examples/csharp BUILD_OPTIONS=":main_run"
 
 install:
 - sudo apt-get update
