Python 3.4 and 3.5 support
- Travis test 3.4 and 3.5
- craftr/utils/types.py no longer enforces 3.6+
- ensure order in JSON data generated for hasing in BuildGraph.hash()
- install nodepy-pm from develop branch
- add typing Pip dependency to nodepy.json
- use subprocess.call() instead of subprocess.run() in Ninja build backend
- use subprocess.check_call() instead of subprocess.run() in csharp language module
- fix craftr/lang/java/augjar.py to NOT try to use ZipFile.open() in
  write mode as that is only supported since Python 3.6, instead use
  ZipFile.write()

--- a/.config/appveyor.yml
+++ b/.config/appveyor.yml
@@ -47,7 +47,7 @@ build_script:
 - pip install wheel
 - pip install git+https://github.com/nodepy/nodepy.git@develop
 - nodepy --version
-- nodepy https://nodepy.org/install-pm master
-- nodepy-pm install -I
+- nodepy https://nodepy.org/install-pm develop
+- nodepy-pm install -PI
 - set PATH=.nodepy/bin;%PATH%
 - craftr --configure %BUILD_MODULE% --build %BUILD_OPTIONS%
