--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: python
 python:
+- 3.4
+- 3.5
 - 3.6
 - nightly
 
@@ -11,7 +13,6 @@ addons:
         key_url: http://keyserver.ubuntu.com/pks/lookup?op=get&search=0xA6A19B38D3D831EF
       - sourceline: deb [arch=amd64] https://packages.microsoft.com/repos/microsoft-ubuntu-trusty-prod trusty main
         key_url: https://packages.microsoft.com/keys/microsoft.asc
-      - packages:
     packages:
       - mono-devel
       - ca-certificates-mono
@@ -27,8 +28,8 @@ install:
 - sudo apt-get update
 - pip install git+https://github.com/nodepy/nodepy.git@develop
 - nodepy --version
-- nodepy https://nodepy.org/install-pm master
-- nodepy-pm install -I
+- nodepy https://nodepy.org/install-pm develop
+- nodepy-pm install -PI
 - export PATH="$(nodepy-pm bin):$PATH"
 
 script:
