--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+sudo: required
 language: python
 python:
 - 3.4
@@ -5,7 +6,6 @@ python:
 - 3.6
 - nightly
 
-# XXX Ideally we only want these to be installed when necessary.
 addons:
   apt:
     sources:
@@ -13,9 +13,6 @@ addons:
         key_url: http://keyserver.ubuntu.com/pks/lookup?op=get&search=0xA6A19B38D3D831EF
       - sourceline: deb [arch=amd64] https://packages.microsoft.com/repos/microsoft-ubuntu-trusty-prod trusty main
         key_url: https://packages.microsoft.com/keys/microsoft.asc
-    packages:
-      - mono-devel
-      - ca-certificates-mono
 
 env:
 - BUILD_MODULE=examples/java BUILD_OPTIONS=":main_run --options java.dist_type=onejar"
@@ -25,6 +22,10 @@ env:
 - BUILD_MODULE=examples/cxx-shared BUILD_OPTIONS=":main_run"
 
 install:
+- if [[ "$BUILD_MODULE" == "examples/csharp" ]]; then
+    sudo apt-get update > /dev/null;
+    sudo apt-get install -y mono-devel ca-certificates-mono > /dev/null;
+  fi
 - sudo apt-get update
 - pip install git+https://github.com/nodepy/nodepy.git@develop
 - nodepy --version
