appveyor: fix sfml example location

--- a/.config/appveyor.yml
+++ b/.config/appveyor.yml
@@ -43,22 +43,22 @@ environment:
   - BUILD_MODULE: examples/cxx-shared
     BUILD_OPTIONS: :main_run --options cxx.compiler=mingw
 
-  - BUILD_MODULE: src/libs/sfml/example
+  - BUILD_MODULE: examples/sfml
     BUILD_OPTIONS:
 
-  - BUILD_MODULE: src/libs/sfml/example
+  - BUILD_MODULE: examples/sfml
     BUILD_OPTIONS: --options cxx.compiler=mingw:C:/MinGW/bin
 
-  - BUILD_MODULE: src/libs/sfml/example
+  - BUILD_MODULE: examples/sfml
     BUILD_OPTIONS: --options cxx.compiler=mingw:C:/mingw-w64/i686-5.3.0-posix-dwarf-rt_v4-rev0/mingw64/bin
 
-  - BUILD_MODULE: src/libs/sfml/example
+  - BUILD_MODULE: examples/sfml
     BUILD_OPTIONS: --options cxx.compiler=mingw:C:/mingw-w64/i686-6.3.0-posix-dwarf-rt_v5-rev1/mingw64/bin
 
-  - BUILD_MODULE: src/libs/sfml/example
+  - BUILD_MODULE: examples/sfml
     BUILD_OPTIONS: --options cxx.compiler=mingw:C:/mingw-w64/x86_64-6.3.0-posix-seh-rt_v5-rev1/mingw64/bin
 
-  - BUILD_MODULE: src/libs/sfml/example
+  - BUILD_MODULE: examples/sfml
     BUILD_OPTIONS: --options cxx.compiler=mingw
 
 matrix:
