--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ python:
 - 3.5
 - 3.6
 install:
-- pip install -r requirements.txt
+- pip install .
 - pip install nose
 script:
 - nosetests tests/*
