--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,5 @@ install:
 - nodepy-pm install
 - export PATH="$PATH:$(nodepy-pm bin)"
 script:
-- nodepy-nosetests
+- nodepy-nosetests tests/*
 - craftr --version
