refactor for new nr library versions from Monorepo

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 glob2>=0.6
 nodepy-runtime>=2.1.5
+nr.collections>=0.1.0
+nr.databind>=0.1.0
+nr.interface>=0.1.0
 nr.fs>=1.1.1
-nr.interface>=1.0.3
-nr.stream>=1.0.2
-nr.types>=1.1.0
+nr.stream>=0.1.0
+nr.sumtype>=0.1.0
 requests>=2.19.1
 toml>=0.9.4
 werkzeug>=0.14.1
